Solving comment problem

--- a/WebDesign/html-from-zero.html
+++ b/WebDesign/html-from-zero.html
@@ -1,10 +1,23 @@
-<!-- !>I'm learning HTML from zero, as my last project is DISGUSTING<!-->
-<!-- *>I will practice some basic concepts here, until i'm sharp enough to use them in my projects :D<!-->
+<!-- ! I'm learning HTML from zero, as my last project is DISGUSTING -->
+<!-- * I will practice some basic concepts here, until i'm sharp enough to use them in my projects :D -->
     <html>
-        <head> <!-->  non-visual elements go here <!-->
+        <head> <!-- non-visual elements go here -->
             <title>HTML studies from zero</title>
         </head>
-        <body> <!--> Visual Elements go here<!-->
+        <body> <!-- Visual Elements go here -->
+            <p align = "center"> this is but a simple paragraph :D <br />with a line break!</p>
+            <p>This is regular text </p>
+            <p align = "right"><b>bold text </b></p>
+            <p><big> big text </big></p>
+            <p><i> italic text </i></p>
+            <p><small> small text </small></p>
+            <p><strong> strong text </strong></p>
+            <p><sub> subscripted text </sub></p>
+            <p><sup> superscripted text </sup></p>
+            <p><ins> inserted text </ins></p>
+            <p><del> deleted text </del></p>
+            <!--just a bunch of tags I wanted to learn-->
+
 
         </body>
     </html>
