--- a/WebDesign/html-from-zero.html
+++ b/WebDesign/html-from-zero.html
@@ -6,6 +6,7 @@
         </head>
         <body> <!-- Visual Elements go here -->
             <p align = "center"> this is but a simple paragraph :D <br />with a line break!</p>
+            <hr width = "30%"></hr>
             <p>This is regular text </p>
             <p align = "right"><b>bold text </b></p>
             <p><big> big text </big></p>
@@ -17,7 +18,24 @@
             <p><ins> inserted text </ins></p>
             <p><del> deleted text </del></p>
             <!--just a bunch of tags I wanted to learn-->
-
-
+            <ol>
+                <li>List component in an Ordered List!</li>
+            </ol>
+            <br />
+            <ul>
+                <li>List component in an Unordered List!</li>
+            </ul>
+            <br />
+            <table border ="2"> <!-- border attribute isnt supported in HTML 5, but for now i use it so i can visualize things better -->
+                <tr>
+                   <td>table columns</td>
+                   <td>table columns</td>
+                   <td>table columns</td>
+                </tr>
+                <tr>
+                <td colspan = "2"><br /></td>
+                <td><br /></td>
+                </tr>
+             </table>
         </body>
     </html>
