nothing meaningful, little time to code today.

--- a/WebDesign/html-from-zero.html
+++ b/WebDesign/html-from-zero.html
@@ -17,7 +17,7 @@
             <p><sup> superscripted text </sup></p>
             <p><ins> inserted text </ins></p>
             <p><del> deleted text </del></p>
-            <!--just a bunch of tags I wanted to learn-->
+            <!--just a bunch of tags I wanted to review, tho styling its better done in CSS-->
             <ol>
                 <li>List component in an Ordered List!</li>
             </ol>
