--- a/WebDesign/html-from-zero.html
+++ b/WebDesign/html-from-zero.html
@@ -2,6 +2,7 @@
 <!-- * I will practice some basic concepts here, until i'm sharp enough to use them in my projects :D -->
     <html>
         <head> <!-- non-visual elements go here -->
+            <link rel="stylesheet" href="css-from-zero.scss">
             <title>HTML studies from zero</title>
         </head>
         <body> <!-- Visual Elements go here -->
@@ -26,7 +27,7 @@
                 <li>List component in an Unordered List!</li>
             </ul>
             <br />
-            <table border ="2"> <!-- border attribute isnt supported in HTML 5, but for now i use it so i can visualize things better -->
+            <table> <!-- border attribute isnt supported in HTML 5, but for now i use it so i can visualize things better -->
                 <tr>
                    <td>table columns</td>
                    <td>table columns</td>
