making and styling the Nav of a site.

--- a/WebDesign/Cutelaria-Do-Indiano/cutelaria-do-indiano.html
+++ b/WebDesign/Cutelaria-Do-Indiano/cutelaria-do-indiano.html
@@ -7,6 +7,13 @@
         <link rel= "stylesheet" href="cutelaria-indiano.css">
     </head>
     <body>
-
+        <nav class ="home-menu">
+            <ul class= "primary-nav">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Produtos</a></li>
+                <li><a href="#">Sobre Nós</a></li>
+                <li><a href="#">Contato</a></li>
+              </ul>
+        </nav>
     </body>
 </html>
