--- a/WebDesign/Cutelaria-Do-Indiano/cutelaria-do-indiano.html
+++ b/WebDesign/Cutelaria-Do-Indiano/cutelaria-do-indiano.html
@@ -4,16 +4,21 @@
     <head>
         <title>Cutelaria Do Indiano</title>
         <meta charset="utf-8">
+        <html lang ="pt-BR">
         <link rel= "stylesheet" href="cutelaria-indiano.css">
     </head>
     <body>
-        <nav class ="home-menu">
-            <ul class= "primary-nav">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Produtos</a></li>
-                <li><a href="#">Sobre Nós</a></li>
-                <li><a href="#">Contato</a></li>
-              </ul>
-        </nav>
+        <header>
+            <nav class ="home-menu">
+                <ul class= "primary-nav">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Produtos</a></li>
+                    <li><a href="#">Sobre Nós</a></li>
+                    <li><a href="#">Contato</a></li>
+                  </ul>
+        </header>
+        <footer>
+            &copy; 2020 by Lucas S. Cruz<br>
+        </footer>
     </body>
 </html>
