--- a/WebDesign/HTML/portifolio_index.html
+++ b/WebDesign/HTML/portifolio_index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" author="Lucas S.Cruz">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Jr.WebDeveloper Lucas S.Cruz</title>
 </head>
 <body>
