--- a/WebDesign/HTML/portifolio_about_me.html
+++ b/WebDesign/HTML/portifolio_about_me.html
@@ -19,6 +19,14 @@
             </ul>
         </nav>
     </header>
+    <p> A poet since I can remember, a amateur musician and a scientist wannabe</p>
+    <p>WebDesign, Data Science and I.A are the things I love the most because in them i can work while, learning,dealing with challenges and creating new things</p>
+    <br>
+    <video width = "50%" height="50%" src="01_violencia.mov" controls> 
+        A poem Declaration Video,not supported.
+    </video>
+    <p>A poem from my Project 'Realidade em carne viva', you can find the complete project in <a href="https://www.instagram.com/0_fragmentos_0/" >@0_fragmentos_0</a></p>
+    
     <footer>
         &copy; 2020 by Lucas S.Cruz <br>
     </footer>
