--- a/WebDesign/Portifolio/portifolio_about_me.html
+++ b/WebDesign/Portifolio/portifolio_about_me.html
@@ -21,10 +21,10 @@
         </nav>
     </header>
     <section>
-        <p> A poet since I can remember, a amateur musician and a scientist wannabe</p>
-        <p>WebDesign, Data Science and I.A are the things I love the most because in them i can work while, learning, dealing with challenges and creating new things</p>
-        <p>Recently I grew a interest in <spam class="Acessibility">Acessibility and Validation of WebSites</spam>, and I'm Studying such subjects to make them my undergratuate thesis.</p>
-        <br>
+        <article>
+            <h2> A poet, a amateur musician and a scientist wannabe</h2>
+            <p>WebDesign, Data Science and I.A are the things I love the most because in them i can work while, learning, dealing with challenges and creating new things Recently I grew a interest in <spam class="Acessibility">Acessibility and Validation of WebSites</spam>, and I'm Studying such subjects to make them my undergratuate thesis.</p>
+        </article>
             <video width = "400em" height= "200em" src="01_violencia.mov" controls> 
             A poem Declaration Video,not supported.
             </video>
