--- a/WebDesign/Portifolio/portifolio_about_me.html
+++ b/WebDesign/Portifolio/portifolio_about_me.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>I'm Lucas, Pleasure to meet you</h1>
-        <nav class="Navigation">
+        <nav>
             <ul>
                 <!--? It would be interesting to use Font Awesome for icons of the page. i will do it later -->
                 <li><a href="index.html" aria-label="Home">Home</a></li> 
@@ -20,11 +20,11 @@
             </ul>
         </nav>
     </header>
-    <section class="poetry">
+    <section>
             <h2> A poet, a amateur musician and a scientist wannabe</h2>
             <p>WebDesign, Data Science and I.A are the things I love the most because in them I work while learning, dealing with challenges and creating new things. Recently I grew a interest in <spam class="Acessibility">Acessibility and Validation of WebSites</spam>, and I'm Studying such subjects to make them my undergratuate thesis.</p>
             <aside class="poem">
-                <p>A poem from my Project 'Realidade em carne viva', you can find the complete project in <a href="https://www.instagram.com/0_fragmentos_0/" >@0_fragmentos_0</a></p>
+                <p>A poem from my Project 'Realidade em carne viva', you can find the complete project in <a class ="Fragmentos" href="https://www.instagram.com/0_fragmentos_0/" >@0_fragmentos_0</a></p>
                 </aside>
             <video width = "400em" height= "200em" src="01_violencia.mov" controls> 
                 A poem Declaration Video,not supported.
