--- a/WebDesign/Portifolio/portifolio_about_me.html
+++ b/WebDesign/Portifolio/portifolio_about_me.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>I'm Lucas, Pleasure to meet you</h1>
-        <nav>
+        <nav class="primary_nav">
             <ul>
                 <!--? It would be interesting to use Font Awesome for icons of the page. i will do it later -->
                 <li><a href="index.html" aria-label="Home">Home</a></li> 
