--- a/WebDesign/Portifolio/portifolio_about_me.html
+++ b/WebDesign/Portifolio/portifolio_about_me.html
@@ -12,10 +12,7 @@
         <nav class="primary_nav">
             <ul>
                 <!--? It would be interesting to use Font Awesome for icons of the page. i will do it later -->
-                <li><a href="index.html" aria-label="Home">Home</a></li> 
-                <li><a href="portifolio_studies.html" aria-label="Studies">Studies</a></li>
-                <li><a href="portifolio_experience.html" aria-label="Experience">Experience</a></li>
-                <li><a href="portifolio_interests.html" aria-label="Interests">Interests</a></li>
+                <li><a href="portifolio_index.html" aria-label="Home">Home</a></li> 
                 <li><a href="portifolio_about_me.html" aria-label="About Me">about me</a></li>
             </ul>
         </nav>
