--- a/WebDesign/Portifolio/portifolio_index.html
+++ b/WebDesign/Portifolio/portifolio_index.html
@@ -9,17 +9,22 @@
 <body>
     <header>
         <h1>I'm Lucas, Pleasure to meet you</h1>
-        <nav>
+        <nav class="primary_nav">
             <ul>
                 <!--? It would be interesting to use Font Awesome for icons of the page. i will do it later -->
                 <li><a href="portifolio_index.html" aria-label="Home">Home</a></li> 
-                <li><a href="portifolio_studies.html" aria-label="Studies">Studies</a></li>
-                <li><a href="portifolio_experience.html" aria-label="Experience">Experience</a></li>
-                <li><a href="portifolio_interests.html" aria-label="Interests">Interests</a></li>
                 <li><a href="portifolio_about_me.html" aria-label="About Me">about me</a></li>
             </ul>
         </nav>
     </header>
+    <section>
+        <h2>My main goals with WebDesign is good validation, complete acessibility and the use of most W3C approved Semantics.</p>
+        <ul>
+            <li>avoid errors</li>
+            <li>learn the concept, not just the tool</li>
+            <li>Discover something new everyday</li>
+        </ul>
+    </section>
     <footer>
         &copy; 2020 by Lucas S.Cruz <br>
     </footer>
