--- a/WebDesign/Portifolio/portifolio_index.html
+++ b/WebDesign/Portifolio/portifolio_index.html
@@ -18,7 +18,7 @@
         </nav>
     </header>
     <section>
-        <h2>My main goals with WebDesign is good validation, complete acessibility and the use of most W3C approved Semantics.</p>
+        <h2>My main goals with WebDesign is good validation, complete acessibility and the use of most W3C approved Semantics.</h2>
         <ul>
             <li>avoid errors</li>
             <li>learn the concept, not just the tool</li>
