--- a/WebDesign/Portifolio/portifolio_about_me.html
+++ b/WebDesign/Portifolio/portifolio_about_me.html
@@ -1,35 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="about_me.css"> <!--Tried to make the CSS in separated Folder, but neither Relative Path nor Path works-->
-    <title> Jr.WebDeveloper Lucas S.Cruz</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="about_me.css" />
+    <!--Tried to make the CSS in separated Folder, but neither Relative Path nor Path works-->
+    <title>Jr.WebDeveloper Lucas S.Cruz</title>
 </head>
+
 <body>
     <header>
         <h1>I'm Lucas, Pleasure to meet you</h1>
         <nav class="primary_nav">
             <ul>
                 <!--? It would be interesting to use Font Awesome for icons of the page. i will do it later -->
-                <li><a href="portifolio_index.html" aria-label="Home">Home</a></li> 
-                <li><a href="portifolio_about_me.html" aria-label="About Me">about me</a></li>
+                <li><a href="portifolio_index.html" aria-label="Home">Home</a></li>
+                <li>
+                    <a href="portifolio_about_me.html" aria-label="About Me">about me</a>
+                </li>
             </ul>
         </nav>
     </header>
     <section>
-            <h2> A poet, a amateur musician and a scientist wannabe</h2>
-            <p>WebDesign, Data Science and I.A are the things I love the most because in them I work while learning, dealing with challenges and creating new things. Recently I grew a interest in <span class="Acessibility">Acessibility and Validation of WebSites</span>, and I'm Studying such subjects to make them my undergratuate thesis.</p>
-            <aside class="poem">
-                <p>A poem from my Project 'Realidade em carne viva', you can find the complete project in <a class ="Fragmentos" href="https://www.instagram.com/0_fragmentos_0/" >@0_fragmentos_0</a></p>
-                </aside>
-            <video width = "400" height= "200" src="01_violencia.mov" controls> 
-                A poem Declaration Video,not supported.
-            </video>
+        <h2>A poet, a amateur musician and a scientist wannabe</h2>
+        <p>
+            WebDesign, Data Science and I.A are the things I love the most because
+            in them I work while learning, dealing with challenges and creating new
+            things. Recently I grew a interest in
+            <span class="Acessibility">Acessibility and Validation of WebSites</span>, and I'm Studying such subjects to
+            make them my undergratuate thesis.
+        </p>
+        <aside class="poem">
+            <p>
+                A poem from my Project 'Realidade em carne viva', you can find the
+                complete project in
+                <a class="Fragmentos" href="https://www.instagram.com/0_fragmentos_0/">@0_fragmentos_0</a>
+            </p>
+        </aside>
+        <video width="400" height="200" src="01_violencia.mov" controls>
+            A poem Declaration Video,not supported.
+        </video>
     </section>
-    
-    <footer>
-        &copy; 2020 by Lucas S.Cruz
-    </footer>
+
+    <footer>&copy; 2020 by Lucas S.Cruz</footer>
 </body>
+
 </html>
