--- a/FrontEnd/HTML/myFirstpage.html
+++ b/FrontEnd/HTML/myFirstpage.html
@@ -28,7 +28,9 @@
             <p></p>
         </main>
         <section>
-
+            <div></div>
+            <div></div>
+            <div></div>
         </section>
         <footer id="contacts">&copy;Lucas da Silva Cruz</footer>
     </body>
