--- a/FrontEnd/HTML/AppliedWebdesign.html
+++ b/FrontEnd/HTML/AppliedWebdesign.html
@@ -11,10 +11,11 @@
             <div class="cardContent">
               <div class="cardText">
                 <h4>Alphabet</h4>
+                <img src="" alt="">
                 <hr>
                 <p><em>Google was founded by Larry Page and Sergey Brin while they were <u>Ph.D. students</u> at <strong>Stanford University</strong>.</em></p>
               </div>
-              <div class="cardLinks">
+              <div class="cardLinks" style="color:red">
                 <a href="https://en.wikipedia.org/wiki/Larry_Page" target="_blank" class="links">Larry Page</a><br><br>
                 <a href="https://en.wikipedia.org/wiki/Sergey_Brin" target="_blank" class="links">Sergey Brin</a>
               </div>
